src/scss/layout/_home.scss
@use '../abstracts' as *;

.home {
  // Header Image

  .home__headerImg-container {
    height: 67vh;
    margin-bottom: $home__headerImg-margin;
    box-shadow: $home__headerImg-shadow;

    background-size: cover;
    background-position: top center;
    background-attachment: fixed;

    @include mqMedium {
      margin-bottom: $home__headerImg-margin--medium;
    }

    @include mqNavbar {
      height: 35vh;
      margin-bottom: $home__headerImg-margin--small;
      background-attachment: scroll;
    }

    transition: background-image 2000ms ease;
  }

  // Header Image Sources

  .headerImg-1 {
    background-image: url('/assets/header_1.jpg');
  }
  .headerImg-2 {
    background-image: url('/assets/header_2.jpg');
  }

  @include mqNavbar {
    .headerImg-1 {
      background-image: url('/assets/header_1-small.jpg');
    }
    .headerImg-2 {
      background-image: url('/assets/header_2-small.jpg');
    }
  }

  // Sections

  section {
    margin-inline: $home__main-marginInline;
    margin-bottom: $home__main-marginBlock;

    &:last-of-type {
      margin-bottom: $home__main-marginBlock--medium;
    }

    @include mqMedium {
      margin-inline: $home__main-marginInline--medium;
      margin-bottom: $home__main-marginBlock--medium;
    }

    @include mqNavbar {
      margin-inline: $home__main-marginInline--small;
      margin-bottom: $home__main-marginBlock--small;
    }
  }

  .paragraph {
    @include twoCol;
    gap: 3rem;

    h2 {
      position: relative;

      &::after {
        @include pseudoElement;
      }

      @include mqSmall {
        text-align: center;
      }
    }

    @include mqMedium {
      @include flexCol;
      gap: 2rem;
    }

    @include mqXXLarge {
      max-width: 1600px;
      margin-inline: auto;
    }
  }

  // Images

  .home__img-container {
    overflow: hidden;

    @include mqMedium {
      width: 100%;
    }
  }
}

.home__img-container--first {
  @include mqMedium {
    order: 3;
  }
}

.home__img {
  box-shadow: $standard-shadow;
  height: 100%;
  object-fit: cover;

  @include mqMedium {
    margin-top: 0.75rem;
  }

  // Image zoom & pan effect
  @media (prefers-reduced-motion: no-preference) {
    @include mqXLarge {
      animation: zoomOut 60s infinite ease-out;
    }
  }
}

// Paragraph Text

.home__text {
  @include flexCol;
  gap: 1.5rem 0rem;

  // Card

  @include mqXLarge {
    padding: 3rem 3vw;
    background-color: $card-bg;
    box-shadow: $standard-shadow;
    border: 2px solid $menu-accent;
    outline: 1px solid $menu-accent;
    outline-offset: -10px;
  }

  // "Get Directions"
  a {
    display: block;
    width: 7rem;

    &:hover {
      color: $link-hover;
    }
  }

  // Location Icon

  i {
    font-size: 1rem;
  }

  #location {
    @include mqMedium {
      flex-direction: column;
    }
  }
}

// Reviews

.reviews {
  margin-top: 6rem;

  @include mqMedium {
    margin-top: 4rem;
  }

  @include mqNavbar {
    margin-top: 2rem;
  }

  @include mqXXLarge {
    max-width: 1600px;
    margin-inline: auto !important;
  }

  // Heading

  h2 {
    margin-bottom: 4rem;
    text-align: center;

    @include mqMedium {
      margin-bottom: 1.5rem;
    }

    @include mqNavbar {
      margin-bottom: 0.8rem;
    }
  }

  // Main Grid

  .grid-container {
    position: relative;
    @include twoCol;

    justify-content: space-between;
    gap: 2rem calc(2rem + 5vw);

    @include mqMedium {
      grid-template-columns: 1fr;
      gap: 1rem;
    }
  }

  // Review Row

  .review__row-container {
    position: relative;
    display: flex;
    justify-content: space-between;

    padding-block: 0.5rem;
    border-bottom: 1px solid #3a3a3a;

    @include mqSmall {
      flex-direction: column;
    }
  }

  // Review Stars

  .stars {
    width: 7.25rem;

    @include mqMedium {
      width: 7rem;
      margin-block: 3px 2px;
    }
  }

  // Lines

  .grid-container::after {
    @include pseudoElement;
    top: 0.9rem;
    left: 50%;

    width: 1px;
    height: 93%;
    background: #3a3a3a;

    @include mqMedium {
      width: 0px;
      background: transparent;
    }
  }
}

// Center Reservation Btn

.reservation-container {
  @include flexCenter;
}

